# bluedot-mpd

./: README.md  README.md.backup  mydot.py  pyproject.toml
src/bluedotMPD_pkg/: MPD.py  runner.py
src/bluedot_mpd_pkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
systemd/: bdotMPD.service
test/: mydot.py
